syntax = "proto3";
package file_service;

option go_package = "api-service/fs";

import "google/api/annotations.proto";


service File{
  rpc GetFile(GetFileRequest) returns (GetFileResponse){
    option (google.api.http) = {
      get: "/api/v0/file"
    };
  };
}

message GetFileRequest {
  string bucket_name = 1;
  string object_key = 2;
}

message GetFileResponse {
  bytes content = 1;
  string filename = 2;
  string content_type = 3;
  int64 size = 4;
  string last_modified = 5;
}